mgrast-web-v4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgrast-web-v4-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
      matchLabels:
        app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
          - name: task-pv-storage
            persistentVolumeClaim:
              claimName: task-pv-claim
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
          - containerPort: 80
        volumeMounts:
                - mountPath: "/usr/share/nginx/html"
                  name: task-pv-storage
