mgrast-web-v4.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgrast-web-v4-service
spec:
  type: NodePort
  selector:
    k8s-app: traefik-ingress
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: mgrast-web-v4-deployment

---
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgrast-web-v4-deployment
spec:
  replicas: 3
  selector:
      matchLabels:
        app: mgrast-web-v4-pod
  template:
    metadata:
      labels:
        app: mgrast-web-v4-pod
    spec:
      volumes:
          - name: task-pv-storage
            persistentVolumeClaim:
              claimName: task-pv-claim
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
          - containerPort: 80
        volumeMounts:
                - mountPath: "/usr/share/nginx/html"
                  name: task-pv-storage
