ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "traefik-ingress"
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: test.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: mgrast-web-v4-service
              servicePort: 80
